--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+body {
+  background-color: #444444;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#main {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+#drum-machine {
+  margin: 150px auto;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  outline: 5px solid green;
+  border-radius: 5px;
+  position: relative;
+  text-align: center;
+  background-color: aquamarine;
+  width: 300px;
+  height: 200px;
+}
+
+
+#allButtons {
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  list-style: none;
+  width: 40px;
+  height: 80px;
+}
+
+#display {
+  padding: 4px;
+  border-radius: 5px;
+  background-color: black;
   color: white;
+  font-weight: 500;
+  outline: 5px solid green;
+  margin: 1px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.drum-pad {
+  margin: 5px;
+  padding: 5px;
+  outline: 3px solid black;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.eachButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  padding: 4px;
+  font-size: large;
+  font-weight: 500;
+  margin: 7px;
+  background-color: aqua;
+  box-shadow: black 3px 3px 5px;
+  border-radius: 3px;
 }
